--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-matplotlib
-pandas
-numpy
-scikit-learn
-
+streamlit>=1.31
+numpy==1.26.4
+scipy==1.11.4
+scikit-learn==1.3.2
+pandas>=2.0
+matplotlib>=3.8
