--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit>=1.31
+streamlit==1.36.0
 numpy==1.26.4
 scipy==1.11.4
 scikit-learn==1.3.2
-pandas>=2.0
-matplotlib>=3.8
+pandas==2.1.4
+matplotlib==3.8.4
